Test Cases/DISNEY/NEGATIVE_TEST/D3_CX.tc
<?xml version="1.0" encoding="UTF-8"?>
<TestCaseEntity>
   <description></description>
   <name>D3_CX</name>
   <tag></tag>
   <comment></comment>
   <recordOption>OTHER</recordOption>
   <testCaseGuid>b0aed9b7-324d-4a82-bfbb-71e8ba2f7ed8</testCaseGuid>
</TestCaseEntity>
